--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "fsevents": "<2.1.3",
     "react": "16.2",
     "react-dom": "16.2"
   },
